/*
 * Copyright 2018 The Feast Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package feast.core;

import "feast/specs/EntitySpec.proto";
import "feast/specs/FeatureSpec.proto";
import "feast/specs/FeatureGroupSpec.proto";
import "feast/specs/StorageSpec.proto";
import "google/protobuf/empty.proto";

option java_package = "feast.core";
option java_outer_classname = "CoreServiceProto";
option go_package = "feast/go-feast-proto/feast/core";

service CoreService {
    /*
    Get entities specified in request.
    This process returns a list of entity specs.
    */
    rpc GetEntities(CoreServiceTypes.GetEntitiesRequest) returns (CoreServiceTypes.GetEntitiesResponse){};

    /*
    Get all entities
    This process returns a list of entity specs.
    */
    rpc ListEntities(google.protobuf.Empty) returns (CoreServiceTypes.ListEntitiesResponse) {};

   /*
    Get features specified in request.
    This process returns a list of feature specs.
    */
    rpc GetFeatures(CoreServiceTypes.GetFeaturesRequest) returns (CoreServiceTypes.GetFeaturesResponse){};

    /*
    Get all features.
    This process returns a list of entity specs.
    */
    rpc ListFeatures(google.protobuf.Empty) returns (CoreServiceTypes.ListFeaturesResponse) {};

   /*
    Get storage specs specified in request.
    This process returns a list of storage specs.
    */
    rpc GetStorage(CoreServiceTypes.GetStorageRequest) returns (CoreServiceTypes.GetStorageResponse){};

    /*
    Get all storage specs.
    This process returns a list of storage specs.
    */
    rpc ListStorage(google.protobuf.Empty) returns (CoreServiceTypes.ListStorageResponse) {};

    /*
    Register a new feature to the metadata store.
    If any validation errors occur, only the first encountered error will be returned.
    */
    rpc RegisterFeature(feast.specs.FeatureSpec) returns (CoreServiceTypes.RegisterFeatureResponse) {};

    /*
    Register a new feature group to the metadata store.
    If any validation errors occur, only the first encountered error will be returned.
    */
    rpc RegisterFeatureGroup(feast.specs.FeatureGroupSpec) returns (CoreServiceTypes.RegisterFeatureGroupResponse) {};

    /*
    Register a new entity to the metadata store.
    If any validation errors occur, only the first encountered error will be returned.
    */
    rpc RegisterEntity(feast.specs.EntitySpec) returns (CoreServiceTypes.RegisterEntityResponse) {};

    /*
    Register a new storage spec to the metadata store.
    If any validation errors occur, only the first encountered error will be returned.
    */
    rpc RegisterStorage(feast.specs.StorageSpec) returns (CoreServiceTypes.RegisterStorageResponse) {};
}

message CoreServiceTypes {
  message GetEntitiesRequest {
      repeated string ids = 1;
  }

  message GetEntitiesResponse {
      repeated feast.specs.EntitySpec entities = 1;
  }

  message ListEntitiesResponse {
      repeated feast.specs.EntitySpec entities = 1;
  }

  // Feature retrieval
  message GetFeaturesRequest {
      repeated string ids = 1;
  }

  message GetFeaturesResponse {
      repeated feast.specs.FeatureSpec features = 1;
  }

  message ListFeaturesResponse {
      repeated feast.specs.FeatureSpec features = 1;
  }

  // Storage spec retrieval
  message GetStorageRequest {
      repeated string ids = 1;
  }

  message GetStorageResponse {
      repeated feast.specs.StorageSpec storageSpecs = 1;
  }

  message ListStorageResponse {
      repeated feast.specs.StorageSpec storageSpecs = 1;
  }

  // Entity registration response
  message RegisterEntityResponse {
      string entityName = 1;
  }
  
  // Feature registration response
  message RegisterFeatureResponse {
      string featureId = 1;
  }

  // Feature group registration response
  message RegisterFeatureGroupResponse {
      string featureGroupId = 1;
  }

  // Storage registration response
  message RegisterStorageResponse {
      string storageId = 1;
  }
}
